--- a/github/workflows/deploy.yml
+++ b/github/workflows/deploy.yml
@@ -29,4 +29,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cars-api:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/frontend-car:latest
