--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,4 +29,9 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/frontend-car:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/car-frontend:latest
+
+
+
+
+
